@@ -1136,15 +1136,17 @@
 	<td class="date">{_it./transaction-date@iso-date||}{_it.@humanitarian&&_it:/transaction-humanitarian||}</td>
 	<td class="description">
 		{_it./description/narrative.0.text&&_it:/description/narrative||}
-		{_it.@ref&&_it:/trans-ref||}
-		{_it./sector&&_it:/sector-trans-wrap||}
-		{_it./recipient-country@code&&_it:/recipient-country/code||}
-		{_it./recipient-region@code&&_it:/recipient-region/code||}
-		{_it./disbursement-channel@code&&_it:/disbursement-channel/code||}
-		{_it./flow-type@code&&_it:/flow-type/code||}
-		{_it./aid-type&&_it:/aid-type||}
-		{_it./finance-type@code&&_it:/finance-type/code||}
-		{_it./tied-status@code&&_it:/tied-status/code||}
+		<div class="fold">
+			{_it.@ref&&_it:/trans-ref||}
+			{_it./sector&&_it:/sector-trans-wrap||}
+			{_it./recipient-country@code&&_it:/recipient-country/code||}
+			{_it./recipient-region@code&&_it:/recipient-region/code||}
+			{_it./disbursement-channel@code&&_it:/disbursement-channel/code||}
+			{_it./flow-type@code&&_it:/flow-type/code||}
+			{_it./aid-type&&_it:/aid-type||}
+			{_it./finance-type@code&&_it:/finance-type/code||}
+			{_it./tied-status@code&&_it:/tied-status/code||}
+		</div>
 	</td>
 	<td class="provider">
 		{_it./provider-org/narrative.0.text&&_it:/provider-org/narrative||}
@@ -1171,7 +1173,7 @@
 #^/trans-ref
 <div>
 	<span title="An internal reference linking this transaction back to the publisher’s financial management system" class="ref">
-		REF {_it.@ref||}
+		REF <span>{_it.@ref||}</span>
 	</span>
 </div>
 
