@@ -1,3 +1,10 @@
+Development Portal (2020-04-25 shi)
+==============================
+Update font-size for currency in org files
+Add fold for collapse of extra information in transaction tables
+Adjust layout for transaction @ref
+
+
 Development Portal (2020-04-22 shi)
 ==============================
 Display vocab-uri for sectors 99 and 98
